<resources>
    <string name="app_name" translatable="false">SpyneAI</string>
    <string name="hello">Greetings!</string>
    <string name="please">Please sign in to continue</string>
    <string name="please_signup">Please sign up to continue</string>
    <string name="use_email">Use Email Instead</string>
    <string name="sign_in">Sign in with OTP</string>
    <string name="login">Login</string>
    <string name="login_with_password">Login with Password</string>
    <string name="sign_up">Sign up </string>
    <string name="send_link">Send Link</string>
    <string name="or">OR</string>
    <string name="by"><![CDATA[By continuing you agree to our ]]></string>
    <string name="terms">Terms &amp; Policies</string>
    <string name="get_started">Let\'s get started</string>
    <string name="enter">Enter the 6-digit code sent to</string>
    <string name="did_not">Didn\'t receive the OTP?</string>
    <string name="resend">Resend</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="submit">Submit</string>
    <string name="backgrounds">Backgrounds</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="shoot_now">Shoot Now</string>
    <string name="order">Order</string>
    <string name="completed">Completed</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_images">Total Images Clicked</string>
    <string name="available_download">Available for download</string>
    <string name="select_marketplace">Select Marketplace</string>
    <string name="confirm">Confirm</string>
    <string name="no_reshoot">Reshoot</string>
    <string name="ongoing">On-Going</string>
    <string name="drafts">Drafts</string>
    <string name="failed">Failed</string>
    <string name="footwear">Footwear</string>
    <string name="automobile">Automobile</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="dealership">DealerShip Logo</string>
    <string name="the_otp">The OTP is incorrect. Please try again.</string>
    <string name="please_enter_email">Please enter a valid email Id</string>
    <string name="api_key_razorpay">rzp_test_o5vheFMPXkCBrp</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exits">Are you sure you want to exit this shoot?</string>
    <string name="order_summary">Order Summary</string>
    <string name="category">Category - </string>
    <string name="total_skus">Total SKU</string>
    <string name="selected_backgrounds">Selected Backgrounds</string>
    <string name="dealership_logo">Dealership Logo</string>
    <string name="top_up"><u>Top UP</u></string>
    <string name="buy_credits">Buy 10 Credits</string>
    <string name="request_on_whatsapp">Request On WhatsApp</string>
    <string name="select_backgrounds">Select Background</string>
    <string name="select_output">Sample 360° Output</string>
    <string name="create_shoots">Generate Output</string>
    <string name="your_images">Your Images</string>
    <string name="processing">Processing</string>
    <string name="continues">Continue</string>
    <string name="your_360_shots">Your Images are almost ready</string>
    <string name="no_internet">Server Not Responding</string>
    <string name="retry">Retry</string>
    <string name="skip">Skip</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="download_hd_images"><u>Download HD Images</u></string>
    <string name="download_free"><u>Download Free (Watermarked)</u></string>
    <string name="downloading...."><u>Downloading....</u></string>
    <string name="download_completed">Download Completed</string>
    <string name="download_failed"><u> Download Failed</u></string>
    <string name="total_images_clicked"><u>Total Images Clicked</u></string>
    <string name="credits_available"><u>Credits Available</u></string>
    <string name="top_up_2"><u>(Top Up)</u></string>
    <string name="sku_id"><u>SKU ID</u></string>
    <string name="images"><u>Images</u></string>
    <string name="credits"><u>Credits</u></string>
    <string name="increase_online_sale"><u>Increase Online Sales for your products by \n<br />uploading visually stunning images on \n<br />Marketplaces

</u></string>
    <string name="forgot_password_dialog">Link sent successfully.\n<br /> Please check your email.</string>
    <string name="focused">Miscellaneous</string>
    <string name="start_new_shoot">Start a new shoot</string>
    <string name="end_shoot">End Shoot</string>
    <string name="sign_up_here"><b>Sign up here</b></string>
    <string name="logout_dialog_text">Are you sure you want to <b>log out.</b></string>
    <string name="login_here"><b>Login here</b></string>
    <string name="shoot_outdoor">Shoot&#160; <font color='#FF7700'><b>Outdoors</b></font>&#160;to avoid irregular reflections</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_mail">Enter the email address to reset your password. \n<br /> You may need to check your spam folder.</string>
    <string name="message_no_permissions">The app cannot work without permissions</string>
    <string name="do_you_need_footwear_overlayes">Do you need footwear overlays?</string>
    <string name="project_name">Project Name</string>
    <string name="project_name_">Project Name -</string>
    <string name="end_project">Are you sure you want to end this project?</string>
    <string name="city_">City -</string>
    <string name="new_project">New Project</string>
    <string name="my_projcts">My Projects</string>
    <string name="session_expired">Session Expired. Please <b>log in</b> again.</string>
    <string name="total_exterior_clicked">Total Exterior Images</string>
    <string name="view_all">View All</string>
    <string name="enter_coupon_code">Have any Referral Code</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="new_to_app">New to SpyneAI</string>
    <string name="create_password">Create Password</string>
    <string name="enter_business_name">Enter Business/Your Name</string>
    <string name="shoot">Shoot</string>
    <string name="credits_remaining">Credits Remaining</string>
    <string name="send_request">Send Request</string>
    <string name="shoot_summary">Shoot Summary</string>
    <string name="select_country">Select Your Country</string>
    <string name="already_a_user">Already a %1$s user?</string>
    <string name="new_to">New to %1$s</string>
    <string name="image_category">Image Category</string>
    <string name="additionl_settings">Additional Notes</string>
    <string name="add_text_here">Add Text Here</string>
    <string name="category_label">Category :</string>
    <string name="total_SKUs">"Total SKUs "</string>
    <string name="describe_your_issue_or_idea">Describe your issue or idea....</string>
    <string name="do_you_have">Do you have any suggestion or found some bug?\n please let us know in the field below.</string>
    <string name="total_images_label">Total Images</string>
    <string name="resume_shoot">Resume Shoot</string>
    <string name="contiune">Continue</string>
    <string name="request_to_add">Request to add credits</string>
    <string name="generate_output">Generate Output</string>
    <string name="image_uploading_in_progess">Image uploading in progress...</string>
    <string name="nerf_data_not_available"><u>Nerf Data not Available!!</u></string>
    <string name="non_nerf_data_not_available"><u>Non-Nerf Data not available!!</u></string>
    <string name="active">Active</string>
    <string name="disconnected">Disconnected</string>
    <string name="innter_connection_label">Internet Connection: </string>
    <string name="all_uploaded">All Images Uploaded </string>
    <string name="select_car_subcategory">Select your car\'s sub-category</string>
    <string name="no_magnato_meter">Your device does not have a Magnetometer!\n\nPlease use another Mobile Device</string>
    <string name="reclick">Are you sure you want to reshoot this angle?</string>
    <string name="select_to_reshoot">Select Shots to Reshoot</string>
    <string name="reshoot_specific">Reshoot Specific Angles</string>
    <string name="settings">Settings</string>
    <string name="show_overlays">Show Overlays</string>
    <string name="show_camera_grid">Show Camera Grid</string>
    <string name="show_gyrometer">Show Gyrometer</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="change_password">Change Password</string>
    <string name="app_version">App Version</string>
    <string name="turn_off_switch">Turn off while you have a \n slow internet connection.</string>
    <string name="wallet">Wallet</string>
    <string name="level_gryometer">Your gyrometer is red!\nReadjust your phone and click when the gyrometer turns green!</string>
    <string name="skip_image">Are you sure you want to\nskip this angle?</string>
    <string name="rate_this_output">Rate this Output:</string>
    <string name="how_we_can_improve">How can we improve?</string>
    <string name="give_permissions">These Premission Need to be Granted in Order to Continue..</string>
    <string name="camera_access">Camera Access</string>
    <string name="file_and_media">Files and Media Access</string>
    <string name="location_access">Location Access</string>
    <string name="go_to_permission_setting">Give Permissions</string>
    <string name="shoot_info">Shoot Info Image</string>
    <string name="no_end_shoot">No, End Shoot</string>
    <string name="want_to_capture_info_image">Want to capture info image ?</string>
    <string name="crop_your_image">Crop your Image</string>
    <string name="reshoot">Reshoot</string>
    <string name="crop">Crop</string>
    <string name="clocked_in_for">Clocked in For </string>
    <string name="near_location">It seems you are not near the location. Please check the location you have selected.</string>
    <string name="images_saved">Your images are saved</string>
    <string name="connet_to_start_processing">Please connect to the internet to begin processing</string>
    <string name="request_credit">Your request for more credit is \n<br />sent successfully.</string>
    <string name="phone">Phone</string>
    <string name="download">Download</string>
    <string name="email_or_phone">Email or Phone number</string>
    <string name="continue_with">Login with Email/Phone</string>
    <string name="signup_with">Signup with Email/Phone</string>
    <string name="business_name">Business Name / Your Name</string>
    <string name="password">Password</string>
    <string name="otp_instead">Use OTP Instead</string>
    <string name="change_bg">Change Background</string>
    <string name="my_account">My Account</string>
    <string name="make_changes_to_account">Make changes to your account</string>
    <string name="attendance">Attendance</string>
    <string name="mark_attendance">Mark you attendance here</string>
    <string name="already_have_account">I already have an account</string>
    <string name="type_of_products">What type of products\nyour business sells?</string>
    <string name="google">Google</string>
    <string name="sign_up_small">Sign Up</string>
    <string name="sign">SIGN IN</string>
    <string name="few_more_details">Few More Details</string>
    <string name="registration_base_text">Create stunning images for \n your online catalog</string>
    <string name="validate_email_for_credit">Validate your email for 20 free credits!</string>
    <string name="validate_otp_button">Validate OTP</string>
    <string name="validate_email">Validate your email</string>
    <string name="email_edittext">Email</string>
</resources>