<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginLeft="@dimen/dp_30"
    android:layout_marginRight="@dimen/dp_30"
    android:layout_marginTop="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLabel"
        android:text="@string/continue_with"
        android:textColor="@color/onboarding_black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etId"
        app:layout_constraintTop_toBottomOf="@id/tvLabel"
        android:background="@drawable/bg_onboarding_et"
        android:padding="@dimen/dp_12"
        android:hint="@string/email_or_phone"
        android:textSize="@dimen/sp_16"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="@dimen/dp_10" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etId"
        android:background="@drawable/bg_onboarding_et"
        android:padding="@dimen/dp_12"
        android:hint="@string/password"
        android:textSize="@dimen/sp_16"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color"
        android:layout_marginTop="@dimen/dp_10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="@dimen/dp_5"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/dp_20"
        app:backgroundTint="@null"
        android:background="@drawable/bg_secondary_button"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUseOtp"
        android:text="@string/otp_instead"
        app:layout_constraintTop_toBottomOf="@id/btLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="@dimen/dp_12"
        android:textSize="@dimen/sp_14"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/use_otp"/>


</androidx.constraintlayout.widget.ConstraintLayout>