<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context=".registration.view.ui.activity.RegistrationBaseActivity">

    <ImageView
    android:id="@+id/ivLogo"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:src="@drawable/app_logo"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCreateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/registration_base_text"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />

    <ImageView
        android:id="@+id/ivSignup"
        android:layout_width="190dp"
        android:layout_height="109dp"
        android:layout_below="@+id/tvCreateImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_signup_background_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:background="@drawable/sign_up_bg"
        tools:context=".registration.view.ui.fragment.signup.RegistrationFragment">

        <TextView
            android:id="@+id/tvCreateYour"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="@dimen/dp_30"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/validate_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="@dimen/dp_30"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email_edittext"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateYour" />

        <RelativeLayout
            android:id="@+id/rlPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="36dp"
            android:background="@drawable/bg_signup_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/sp_16"
                android:background="@null"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_email"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_hint"
                android:textSize="@dimen/sp_12" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSentOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="36dp"
            android:background="@drawable/bg_secondary_button"
            android:backgroundTint="@color/primary_light_dark"
            android:elevation="@dimen/dp_5"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/validate_otp_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlPhone" />

        <TextView
            android:id="@+id/tvValiate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/validate_email_for_credit"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSentOtp" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_marginBottom="@dimen/dp_60"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/edit_text_hint"
            android:textSize="@dimen/sp_12"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValiate"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>